viewport meta added, title updated.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="css/main.css">
+  <meta name="viewport" content="initial-scale=1">
   <script src="js/bundle.js"></script>
   <body layout="column">
     <md-toolbar>
-      <h1 layout-align-gt-sm="center" class="md-toolbar-tools">Taksim Muradiye Öğrenci Yurdu</h1>
+      <h1 layout-align="center" class="md-toolbar-tools">Taksim Muradiye Erkek Öğrenci Yurdu</h1>
     </md-toolbar>
     <div id="header">
       <md-toolbar md-scroll-shrink layout="row" flex class="md-tall">
