--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="css/main.css">
   <meta name="viewport" content="initial-scale=1">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+  <link rel="stylesheet" href="css/main.css">
   <script src="js/bundle.js"></script>
-  <body layout="column">
-    <md-toolbar>
-      <h1 layout-align="center" class="md-toolbar-tools">Taksim Muradiye Erkek Öğrenci Yurdu</h1>
+  <body>
+    <md-toolbar class="md-tall"><span flex></span>
+      <div layout="column" layout-align="center" class="md-toolbar-tools md-toolbar-tools-bottom"><span>Taksim Muradiye Erkek Öğrenci Yurdu</span></div>
     </md-toolbar>
     <div id="header">
       <md-toolbar md-scroll-shrink layout="row" flex class="md-tall">
