--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p>Kocatepe Mh. Feridiye Cd. Aşıklar Sk. No: 10<br>Beyoğlu, İstanbul</p>
         </md-card-content>
       </md-card>
-      <md-card><img src="pattern.png">
+      <md-card class="announcements"><img src="pattern.png">
         <md-card-content flex>
           <h2 class="md-title">Duyurular</h2>
           <p>2014 - 2015 yılı kontenjanlarımız dolmuştur. İlginize teşekkür ederiz.<br><small>14.09.2014</small></p>
