--- a/index.html
+++ b/index.html
@@ -1,36 +1,1 @@
-<!DOCTYPE html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-  <link rel="stylesheet" href="css/main.css">
-  <script src="js/bundle.js"></script>
-  <body>
-    <md-toolbar class="md-tall"><span flex></span>
-      <div layout="column" layout-align="center" class="md-toolbar-tools md-toolbar-tools-bottom"><span>Taksim Muradiye Erkek Öğrenci Yurdu</span></div>
-    </md-toolbar>
-    <div id="header">
-      <md-toolbar md-scroll-shrink layout="row" flex class="md-tall">
-        <div layout-align="center" class="md-toolbar-tools">
-          <md-button href="tel:0 212 235 23 72">0(212) 235 23 72</md-button>
-          <md-button href="mailto:bilgi@muradiye.tk" class="no-text-transform">bilgi@muradiye.tk</md-button>
-        </div>
-      </md-toolbar>
-    </div>
-    <div id="content" layout="column" flex>
-      <md-card>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3009.482871336824!2d28.988765644425406!3d41.03656837162566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x7a0538bf1ebfdf2e!2zVGFrc2ltIE11cmFkaXllIFnDvGtzZWsgw5bEn3JlbmltIEVya2VrIMOWxJ9yZW5jaSBZdXJkdQ!5e0!3m2!1str!2s!4v1433848492156" height="450" frameborder="0" style="border:0"></iframe>
-        <md-card-content>
-          <h2 class="md-title">İletişim</h2>
-          <p>Kocatepe Mh. Feridiye Cd. Aşıklar Sk. No: 10<br>Beyoğlu, İstanbul</p>
-        </md-card-content>
-      </md-card>
-      <md-card class="announcements"><img src="pattern.png">
-        <md-card-content flex>
-          <h2 class="md-title">Duyurular</h2>
-          <p>2014 - 2015 yılı kontenjanlarımız dolmuştur. İlginize teşekkür ederiz.<br><small>14.09.2014</small></p>
-        </md-card-content>
-      </md-card>
-    </div>
-  </body>
-</head>
+<!DOCTYPE html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="initial-scale=1"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic"><link rel="stylesheet" href="css/main.css"><script src="js/bundle.js"></script><body><ng-include src="'views/header.html'"></ng-include><div id="content" layout="column" flex><md-card class="about"><md-card-content flex ng-include="'views/hakkimizda.html'"></md-card-content></md-card><md-card class="announcements"><img src="pattern.png"><md-card-content flex ng-include="'views/duyurular.html'"></md-card-content></md-card><md-card><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3009.482871336824!2d28.988765644425406!3d41.03656837162566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x7a0538bf1ebfdf2e!2zVGFrc2ltIE11cmFkaXllIFnDvGtzZWsgw5bEn3JlbmltIEVya2VrIMOWxJ9yZW5jaSBZdXJkdQ!5e0!3m2!1str!2s!4v1433848492156" height="450" frameborder="0" style="border:0"></iframe><md-card-content ng-include="'views/iletisim.html'"></md-card-content></md-card></div></body></head>
